fix testanswer z-index and header

--- a/src/common.blocks/header.scss
+++ b/src/common.blocks/header.scss
@@ -10,7 +10,7 @@
   padding: 0 7%;
   background-color: #ffffff;
   border-bottom: 1px solid rgba(64, 64, 64, 0.15);
-  z-index: 1;
+  z-index: 20;
 }
 
 .header-links {
